--- a/_layouts/niepi.html
+++ b/_layouts/niepi.html
@@ -57,7 +57,7 @@
         <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
         mathiasbynens.be/notes/async-analytics-snippet -->
         <script>
-            var _gaq=[['_setAccount','UA-20657819-1'],['_trackPageview']];
+            var _gaq=[['_setAccount','UA-73137-4'],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
                 g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
                 s.parentNode.insertBefore(g,s)}(document,'script'));
